--- a/tracing-opentelemetry/Cargo.toml
+++ b/tracing-opentelemetry/Cargo.toml
@@ -24,10 +24,10 @@ default = ["tracing-log"]
 
 [dependencies]
 opentelemetry = { version = "0.17", default-features = false, features = ["trace"] }
-tracing = { path = "../tracing", version = "0.1", default-features = false, features = ["std"] }
-tracing-core = { path = "../tracing-core", version = "0.1" }
-tracing-subscriber = { path = "../tracing-subscriber", version = "0.3", default-features = false, features = ["registry", "std"] }
-tracing-log = { path = "../tracing-log", version = "0.1", default-features = false, optional = true }
+tracing = { version = "0.1.36", default-features = false, features = ["std"] }
+tracing-core = { version = "0.1.28" }
+tracing-subscriber = { version = "0.3.14", default-features = false, features = ["registry", "std"] }
+tracing-log = { version = "0.1.3", default-features = false, optional = true }
 once_cell = "1"
 
 [dev-dependencies]
